fix(public): fix app card height being capped and the card overflowing

--- a/public/components/AppCard.scss
+++ b/public/components/AppCard.scss
@@ -3,7 +3,6 @@
   width: 33.33%;
   padding: 8px 16px;
   box-sizing: border-box;
-  height: 255px;
 
   .app {
     height: 256px;
